@@ -1,5 +1,10 @@
 2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
+	* gas/arm/armv8-a+crypto.s: Update testcase.
+	* gas/arm/armv8-a+crypto.d: Likewise.
+
+2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
 	* gas/arm/armv8-a+crypto.d: Update testcase.
 	* gas/arm/armv8-a+crypto.s: Likewise.
 
